// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`refractor elements ActionElement given action with copy field should refract to semantic ApiDOM tree 1`] = `
(ActionElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements ActionElement given action with remove field should refract to semantic ApiDOM tree 1`] = `
(ActionElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (BooleanElement)))
`;

exports[`refractor elements ActionElement given generic ApiDOM element should refract to semantic ApiDOM tree 1`] = `(ActionElement)`;

exports[`refractor elements ActionElement should refract to semantic ApiDOM tree 1`] = `
(ActionElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;
